<resources>
    <string name="app_name">شاهد اوج</string>
    <string name="title_home">خانه</string>
    <string name="title_dashboard">لیست دروس</string>
    <string name="title_notifications">اطلاعیه ها</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_signup_login">ثبت نام/ورود</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="action_appname">هم کلاسی (شاهد)</string>
    <string name="prompt_username">نام کاربری(شماره موبایل شما) مثل: 9120000000</string>
    <string name="prompt_password">پسورد</string>
    <string name="action_sign_in">ثبت نام</string>
    <string name="action_confirmEdit">ثبت تغییرات</string>
    <string name="action_cancel">لغو</string>
    <string name="action_login">ورود</string>
    <string name="action_logout">خروج از حساب کاربری</string>
    <string name="action_name_signup">نام</string>
    <string name="action_family_signup">نام خانوادگی</string>
    <string name="action_stdID_signup">شماره دانشجویی</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_phone">شماره تلفن باید با 9 آغاز شود</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email

        completions."
    </string>
    <string name="title_activity_extra_course_req">درخواست درس</string>

    <string name="title_activity_splash_screen_activity">splashScreen_activity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="avali">same shit </string>
    <string name="dovomi">same shit </string>
    <string name="sevomi">same shit </string>
    <string name="chaharomi">same shit </string>
    <string name="panjomi">same shit </string>
    <string name="shishomi">same shit </string>
    <string name="haftomi">same shit </string>



    <string name="app_intro">شاهد اوج </string>



</resources>
